New integration tests. Bug fixes for sso.